--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
-# clearshield-server
 {
   "name": "clearshield-server",
   "version": "1.0.0",
+  "description": "ClearShield Intake API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "cors": "^2.8.5"
   }
 }
